--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(12, 12, 12, 0.87);
-  background-color: #f2daed;
+  color: rgba(3, 3, 3, 0.87);
+  background-color: #fbf8fa;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -37,15 +37,16 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border:1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #887ff0;
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
